[SERV-774] Make POST endpoints accept arrays
