# src/main/java/edu/ucla/library/prl/harvester/handlers/AddInstitutionHandler.java
@@ -1,7 +1,10 @@
 
 package edu.ucla.library.prl.harvester.handlers;
 
+import java.util.List;
 import java.util.concurrent.CompletionStage;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.apache.http.HttpStatus;
 import org.apache.solr.client.solrj.response.UpdateResponse;
@@ -12,10 +15,12 @@ import edu.ucla.library.prl.harvester.MediaType;
 
 import io.ino.solrs.JavaAsyncSolrClient;
 
+import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
 import io.vertx.core.Vertx;
 import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.http.HttpServerResponse;
+import io.vertx.core.json.JsonArray;
 import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.RoutingContext;
 import io.vertx.sqlclient.Tuple;
@@ -36,50 +41,63 @@ public final class AddInstitutionHandler extends AbstractSolrAwareWriteOperation
     @Override
     public void handle(final RoutingContext aContext) {
         final HttpServerResponse response = aContext.response();
+        final Stream<Future<Institution>> semanticValidations =
+                aContext.body().asJsonArray().stream().map(this::validateJob);
 
-        try {
-            final JsonObject institutionJSON = aContext.body().asJsonObject();
-            final Institution institution = new Institution(institutionJSON);
+        CompositeFuture.all(semanticValidations.collect(Collectors.toList())).onSuccess(result -> {
+            final List<Institution> institutions = result.list();
 
-            myHarvestScheduleStoreService.addInstitution(institution).compose(institutionID -> {
-                return updateSolr(Tuple.of(institutionID, institutionJSON)).map(institutionID);
-            }).onSuccess(institutionID -> {
-                final JsonObject responseBody = Institution.withID(institution, institutionID).toJson();
+            myHarvestScheduleStoreService.addInstitutions(institutions).compose(institutionsWithIDs -> {
+                return updateSolr(Tuple.of(institutionsWithIDs)).map(institutionsWithIDs);
+            }).onSuccess(institutionsWithIDs -> {
+                final JsonArray responseBody =
+                        new JsonArray(institutionsWithIDs.stream().map(Institution::toJson).toList());
 
                 response.setStatusCode(HttpStatus.SC_CREATED)
                         .putHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON.toString())
                         .end(responseBody.encode());
             }).onFailure(aContext::fail);
-        } catch (final InvalidInstitutionJsonException details) {
+        }).onFailure(details -> {
             response.setStatusCode(HttpStatus.SC_BAD_REQUEST).end(details.getMessage());
-        }
+        });
     }
 
     /**
-     * Adds an institution doc to Solr.
+     * Adds institution docs to Solr.
      *
-     * @param aData A Tuple of the ID of the institution to update, and its JSON representation
+     * @param aData A 1-tuple of the list of institutions (each bearing a unique local ID) to update
      */
     @Override
+    @SuppressWarnings("unchecked")
     Future<UpdateResponse> updateSolr(final Tuple aData) {
-        final Institution institution =
-                Institution.withID(new Institution(aData.getJsonObject(1)), aData.getInteger(0));
-
-        return updateInstitutionDoc(mySolrClient, institution);
+        return updateInstitutionDoc(mySolrClient, (List<Institution>) aData.get(List.class, 0));
     }
 
     /**
-     * Adds or updates an institution doc in Solr.
+     * Adds or updates institution docs in Solr.
      *
      * @param aSolrClient A Solr client
-     * @param anInstitution The institution
+     * @param anInstitutions The list of institutions
      * @return The result of performing the Solr update
      */
     static Future<UpdateResponse> updateInstitutionDoc(final JavaAsyncSolrClient aSolrClient,
-            final Institution anInstitution) {
+            final List<Institution> anInstitutions) {
         final CompletionStage<UpdateResponse> addInstitution =
-                aSolrClient.addDoc(anInstitution.toSolrDoc()).thenCompose(result -> aSolrClient.commit());
+                aSolrClient.addDocs(anInstitutions.stream().map(Institution::toSolrDoc).toList())
+                        .thenCompose(result -> aSolrClient.commit());
 
         return Future.fromCompletionStage(addInstitution);
+    }
+
+    /**
+     * @param anInstitution An entry in the request body array
+     * @return A Future that succeeds if the entry is a valid {@link Institution}
+     */
+    private Future<Institution> validateJob(final Object anInstitution) {
+        try {
+            return Future.succeededFuture(new Institution(JsonObject.mapFrom(anInstitution)));
+        } catch (final IllegalArgumentException | InvalidInstitutionJsonException details) {
+            return Future.failedFuture(details);
+        }
     }
 }
